# CodeLens-AI

./: .gitignore  README.md  benchmark_dataset.json  cleanup.sh  evaluate.py  evaluation_report.md  evaluation_results.json  rule_confusion_matrix.json  run.sh  setup.sh  status.sh  stop.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  models.py  prompt_builder.py  response_parser.py  service.py
backend/app/api/: __init__.py  analyze.py  apply_fix.py  explain.py  metrics.py  runtime.py
backend/app/fixes/: __init__.py  base.py  engine.py  models.py  registry.py
backend/app/metrics/: __init__.py  complexity_engine.py
backend/app/parser/: __init__.py  ast_builder.py  node_mapper.py  position_tracker.py
backend/app/rules/: __init__.py  base.py  binary_search.py  dangerous_import.py  dead_code.py  engine.py  infinite_loop.py  missing_return.py  models.py  recursion.py  registry.py  shadowed_variable.py  (+3 more)
backend/tests/: rule_test_utils.py  test_ai_explanation_layer.py  test_api_robustness.py  test_apply_fix_engine.py  test_binary_search.py  test_complexity_engine.py  test_contracts.py  test_dangerous_import.py  test_dead_code.py  test_fuzz_robustness.py  test_infinite_loop.py  test_missing_return.py  test_parser_robustness.py  test_performance_audit.py  test_recursion.py  test_rule_engine_adversarial.py  test_runtime_engine.py  test_semantic_audit.py  test_semantic_extraction.py  test_shadowed_variable.py  test_undefined_variable.py  test_unreachable_code.py  test_unused_variable.py
docs/: MVP.md  (+15 more)
(+93 files in other folders)
