[project]
name = "codelens-ai-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for CodeLens AI."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.6,<1.0.0",
  "networkx>=3.4.2,<4.0.0",
  "pydantic>=2.10.4,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5.0,<3.0.0",
  "mypy>=1.14.0,<2.0.0",
  "pytest>=8.3.4,<9.0.0",
  "ruff>=0.8.4,<1.0.0"
]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
exclude = ["\\.venv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
